--- a/selecteur.html
+++ b/selecteur.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Titre de la page</title>
+  <title>selecteur.html</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/selecteur.css">
   <link rel="stylesheet" href="assets/css/selecteur-solutions.css">
